[metadata]
name = pass_autopass
summary = Automatic password changer for pass
description-file =
    README.md
author = Stephane Albert
author-email = sheeprine@nullplace.com
home-page = https://github.com/sheeprine/pass-autopass
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    pass_autopass

[entry_points]

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook
